# robotic-mower-simulator

./: Cargo.toml  readme.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/file_utils/: Cargo.toml
crates/file_utils/src/: image_loader.rs  lib.rs
crates/gui_app/: Cargo.toml
crates/gui_app/src/: main.rs
crates/simulation_worker/: Cargo.toml
crates/simulation_worker/src/: grassmap.rs  robot.rs  simulation.rs
crates/ui_components/: Cargo.toml
crates/ui_components/src/: lib.rs
gui_app/: BENCH.md  Cargo.toml  visualize_grass.ipynb
gui_app/Hulls/: Create_hull_from_XML.ipynb  tachytools.py
gui_app/Hulls/xml_files/: 2024_kress_ti.xml
gui_app/results/: 10228.zst  1200.zst  13313.zst  17571.zst  1800.zst  21216.zst  2400.zst  25596.zst  28596.zst  29861.zst  3000.zst  35943.zst  3600.zst  39591.zst  40864.zst  47609.zst  51264.zst  54264.zst  56114.zst  600.zst  62277.zst  64677.zst  66517.zst  7228.zst  72581.zst  75050.zst  77533.zst  83586.zst  85445.zst  86045.zst
gui_app/src/: lib.rs  main.rs
results/: 1200.zst  1800.zst  600.zst
simulation_worker/: Cargo.toml
simulation_worker/src/: grassmap.rs  lib.rs  robot.rs  simulation.rs  vector2.rs
