[workspace]
resolver = "3"
name = "robotic-mower-simulator"
version = "0.1.0"
edition = "2024"
members = ["gui_app"]

[workspace.dependencies]
byteorder = "1.5.0"
flate2 = "1.1.1"
image = "0.25.6"
rand = "0.9.1"
rayon = "1.10.0"
zstd = "0.13.3"

# [profile.release]
# codegen-units = 1
# lto = "fat"
# panic = "abort"
# strip = "debuginfo"
